<resources>
    <string name="app_name">Android Implementation Template</string>
    <string name="add_title">Add title</string>
    <string name="add_description">Add Description</string>
    <string name="create_task_btn">create</string>
    <string name="update_task_btn">update</string>
    <string name="add_task_title">Add Task</string>
    <string name="update_title">Update Task</string>
    <string name="create_title">Create Task</string>
    <string name="empty_title_error_message">Please add title :)</string>
    <string name="splash_footer_text">Android Note app Impl | By Balaagha Alihumatov</string>
    <string name="note_app_name">Note App</string>
    <string name="empty_page_case">You dont have any note. You can click create button for adding new note</string>
    <string name="detail_note_title">Detail note</string>
</resources>