<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.feature.home.view.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task_title"
            android:textAlignment="center"
            android:textColor="@color/darkGray"
            android:textSize="40sp"
            android:layout_marginTop="20dp"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:hint="@string/add_title"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintTextColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textShortMessage"
                android:maxLines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/add_description"
            app:errorEnabled="true"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textLongMessage|textMultiLine"
                android:maxLines="5" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnCreateOrUpdate"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/create_task_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>